fix: search result text color in dark mode

--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -204,6 +204,11 @@
 
             & > h3 {
               margin: 0;
+              color: var(--dark);
+            }
+
+            & > p {
+              color: var(--darkgray);
             }
 
             @media all and not ($mobile) {
